objects/bDeal__c.object
<CustomObject>
    <fields>
        <fullName>Data_Source__c</fullName>
        <inlineHelpText>Identifies what data sources will be used to validate commitments that are part of the agreement.</inlineHelpText>
        <label>Data Source</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>myMpa</fullName>
                </value>
                <value>
                    <fullName>Enterprise Analytics</fullName>
                </value>
                <value>
                    <fullName>MCBS</fullName>
                </value>
                <value>
                    <fullName>MDS</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Active__c</fullName>
        <description>Deal: Date Active Field for Deal Reporting</description>
        <inlineHelpText>Deal: Date Active Field for Deal Reporting</inlineHelpText>
        <label>Date Active</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Changed__c</fullName>
        <label>Date Changed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Changed</fullName>
                </value>
                <value>
                    <fullName>NotChanged</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Dead__c</fullName>
        <description>Deal: Date Dead Field for Deal Reporting</description>
        <inlineHelpText>Deal: Date Dead Field for Deal Reporting</inlineHelpText>
        <label>Date Dead</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Deal_Approved__c</fullName>
        <label>Date Deal Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Expired__c</fullName>
        <description>Deal: Date Expired Field for Deal Reporting</description>
        <inlineHelpText>Deal: Date Expired Field for Deal Reporting</inlineHelpText>
        <label>Date Expired</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Rejected__c</fullName>
        <description>Deal: Date Rejected Field for Deal Reporting</description>
        <inlineHelpText>Deal: Date Rejected Field for Deal Reporting</inlineHelpText>
        <label>Date Rejected</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Returned__c</fullName>
        <description>Deal: Date Returned Field for Deal Reporting</description>
        <inlineHelpText>Deal: Date Returned Field for Deal Reporting</inlineHelpText>
        <label>Date Returned</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_last_Time_Out__c</fullName>
        <description>S691018 : to track Date of last Time Out</description>
        <label>Date of last Time Out</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_submission__c</fullName>
        <label>Date of Submission</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_End_Date_Expired__c</fullName>
        <description>Used for Reporting Only - Calculates the number of days a Deal&apos;s End Date has expired. Today - End Date.</description>
        <formula>FLOOR(Today() - End_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used for Reporting Only - Calculates the number of days a Deal&apos;s End Date has expired. Today - End Date.</inlineHelpText>
        <label># Days Past End Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deal_Accounting_Summary_Status__c</fullName>
        <label>Deal Accounting Summary Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Approval_Condition__c</fullName>
        <label>Deal Approval Condition</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>&lt;= 1 MM</fullName>
                </value>
                <value>
                    <fullName>&lt;= 10 MM</fullName>
                </value>
                <value>
                    <fullName>&gt;10 MM &lt;=25 MM</fullName>
                </value>
                <value>
                    <fullName>&gt;25 MM &lt;=50 MM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deal_Approved_Send_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox is used for to activate the workflow that sends a email to the submitter and to the owner of the deal</description>
        <inlineHelpText>This checkbox is used for to activate the workflow that sends a email to the submitter and to the owner of the deal</inlineHelpText>
        <label>Deal Approved Send Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deal_Covering_Countries_Text__c</fullName>
        <description>Value from the Deal Covering Countries field is copied into this field (via workflow). This field is then used in Deal Sharing Rule criteria.</description>
        <label>Deal Covering Countries Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Deletion__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Can I delete this deal?</description>
        <inlineHelpText>This Check is required to be able to delete this deal.</inlineHelpText>
        <label>Deal Deletion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deal_ICA__c</fullName>
        <label>Deal ICA</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Deal_IDText__c</fullName>
        <description>For usability. Users will not be able to edit this field (the real field will be at the bottom of the page)</description>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deal ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Last_Modified__c</fullName>
        <description>used to get an entry in the edit field history</description>
        <label>Deal Last Modified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Deal_Manager_Email__c</fullName>
        <description>S691018 : holds Deal Manager Email</description>
        <label>Deal Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Deal_Name__c</fullName>
        <inlineHelpText>Brief description of the deal.</inlineHelpText>
        <label>Deal Name</label>
        <length>250</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Notification_Counter__c</fullName>
        <description>This counter keeps track of Deal Notification Counter</description>
        <label>Deal Notification Counter</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deal_Notification_Date__c</fullName>
        <description>S691018 : This field is used to keep track of Deal Notification.</description>
        <label>Deal Notification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deal_Owner__c</fullName>
        <label>Deal Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Ready_for_Submit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used as a substep (updated by workflow) to determine the value in the Submission Ready field.</description>
        <label>Deal Ready for Submit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deal_Reminder_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>S691018 : This field triggers Deal Reminder.</description>
        <label>Deal Reminder Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deal_Reminder_Retrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>S691018 : This field re-triggers Deal Reminder.</description>
        <label>Deal Reminder Retrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deal_Review_Date__c</fullName>
        <description>For finance users only. Write access given via a permission set. Read only for all other users.</description>
        <inlineHelpText>Finance use only.</inlineHelpText>
        <label>Deal Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deal_Status__c</fullName>
        <inlineHelpText>Indicates what phase is the deal in its lifecycle</inlineHelpText>
        <label>Deal Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Business Case Development</fullName>
                    <color>#0B6FCE</color>
                    <default>true</default>
                    <label>Business Case Development</label>
                </value>
                <value>
                    <fullName>Business Case Submitted for Approval</fullName>
                    <color>#78C953</color>
                    <label>Business Case Submitted for Approval</label>
                </value>
                <value>
                    <fullName>Business Case Returned</fullName>
                    <color>#A845DC</color>
                    <label>Business Case Returned</label>
                </value>
                <value>
                    <fullName>Active</fullName>
                    <color>#F3D904</color>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Dead</fullName>
                    <color>#A53711</color>
                    <label>Dead</label>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                    <color>#999999</color>
                    <label>Rejected</label>
                </value>
                <value>
                    <fullName>Close Alternate</fullName>
                    <color>#FF99FF</color>
                    <label>Close Alternate</label>
                </value>
                <value>
                    <fullName>Business Case Approved Internally</fullName>
                    <color>#009900</color>
                    <label>Business Case Approved Internally</label>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Terminated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deal_Type__c</fullName>
        <inlineHelpText>Indicates what type of agreement we have with the customer.</inlineHelpText>
        <label>Type of Deal</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Merchant Agreement</fullName>
                </value>
                <value>
                    <fullName>Maestro/Cirrus</fullName>
                </value>
                <value>
                    <fullName>MasterCard Processing</fullName>
                </value>
                <value>
                    <fullName>Local Country Transaction Processing only</fullName>
                </value>
                <value>
                    <fullName>Issuing</fullName>
                </value>
                <value>
                    <fullName>Acquiring</fullName>
                </value>
                <value>
                    <fullName>Alliance</fullName>
                </value>
                <value>
                    <fullName>Segment</fullName>
                </value>
                <value>
                    <fullName>CBA (With Discounted Core Fee Pricing)</fullName>
                </value>
                <value>
                    <fullName>Other Customer Investment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deal_covering_countries__c</fullName>
        <inlineHelpText>Deal Covering Countries are automatically populated based on the Countries selected within the Opportunity record. To change the Deal Covering Countries, return to the Opportunity and click the Manage Opportunity Geography link.</inlineHelpText>
        <label>Deal Covering Countries</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Deal_edit_history__c</fullName>
        <description>Needed to populate the edit history with every edit of a deal. This field is populated by a workflow.</description>
        <label>Deal</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Deal_full_name__c</fullName>
        <description>Field is used for migration purposes the Deal name in the oracle databases is in 253 cases longer then 80 characters so we need an extra field to hold the complete name (is not visible on te page layout yet)</description>
        <label>Deal full name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deals_Days_Since_Last_Activity__c</fullName>
        <description>This custom formula field calculates the number of days since a deal had any activity. Used in reporting.</description>
        <formula>FLOOR(Today() - LastActivityDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This custom formula field calculates the number of days since a deal had any activity. Used in reporting.</inlineHelpText>
        <label>Deals-Days Since Last Activity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deals_Days_since_Last_Modified__c</fullName>
        <description>This custom formula field calculates the number of days since a deal has last be modified. Used in reporting.</description>
        <formula>Today() - DATEVALUE(LastModifiedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This custom formula field calculates the number of days since a deal has last be modified. Used in reporting.</inlineHelpText>
        <label>Deals-Days since Last Modified</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deals_Unique_Count__c</fullName>
        <description>This custom formula field is used to report unique Deal record counts in reporting.</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This custom formula field is used to report unique Deal record counts in reporting.</inlineHelpText>
        <label>Deals Unique Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Defend_Flip_Grow__c</fullName>
        <label>Defend / Flip / Grow</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Defend</fullName>
                </value>
                <value>
                    <fullName>Flip</fullName>
                </value>
                <value>
                    <fullName>Grow</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Delivery_Unit_Text__c</fullName>
        <description>Text field for the Delivery Unit field seen on the MasterCard Processing deal type.  Created to be used in sharing rules.  Not intended to be on page layout.</description>
        <label>Delivery Unit Text</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>Summary of the opportunity and commitment of the deal.</inlineHelpText>
        <label>Background/Strategy</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Disc_Gross_Customer_Revenue_Base_Inc__c</fullName>
        <description>T2_Gross_Customer_Revenue__c/ ((1+ BD_Discounted_Rate__c ) ^ (BD_Financial_Model__c.BD_Deal_Year__c -1)) 
Field is calculated in the BD_Deal_TriggerActions</description>
        <label>Disc. Gross Customer Revenue(Base + Inc)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Disclaimer_Reminder__c</fullName>
        <description>Field added to satisfy an audit point for Legal where documents are sent out without the appropriate disclaimer information.</description>
        <formula>IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;red&quot;, 20, 20) + &quot; &quot; + &quot;Use proper disclosure language when presenting approved deal terms to customers. If any questions, consult your partners in LFI.&quot; + &quot; &quot; + IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;red&quot;, 20, 20)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Disclaimer Reminder</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discounted_Gross_Customer_Revenue_Inc__c</fullName>
        <description>T1_Gross_Customer_Revenue__c/ ((1+ BD_Discounted_Rate__c ) ^ (BD_Financial_Model__c.BD_Deal_Year__c -1))
Field is calculated in the BD_Deal_TriggerActions</description>
        <label>Discounted Gross Customer Revenue (Inc.)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discounted_Gross_Total_Revenue_B_I__c</fullName>
        <label>Discounted Gross Total Revenue (B+I)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discounted_Gross_Total_Revenue_Inc__c</fullName>
        <label>Discounted Gross Total Revenue (Inc.)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discounted_Issuer_Payout_Base_Inc__c</fullName>
        <formula>IF(BLANKVALUE(Discounted_Issuing_Revenue_Base_Inc_Val__c, 0) = 0, 
0, 
 IF((T2_Discounted_Incentive__c / Discounted_Issuing_Revenue_Base_Inc_Val__c) &gt; 0, (T2_Discounted_Incentive__c / Discounted_Issuing_Revenue_Base_Inc_Val__c) , (T2_Discounted_Incentive__c / Discounted_Issuing_Revenue_Base_Inc_Val__c) * -1) 
)</formula>
        <label>Discounted Issuer Payout % (Base +Inc.)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Discounted_Issuer_Payout_Inc__c</fullName>
        <formula>IF(BLANKVALUE(Discounted_Issuing_Revenue_Inc_Val__c , 0) = 0, 
0, 
 IF((T1_Discounted_Incentive__c / Discounted_Issuing_Revenue_Inc_Val__c) &gt; 0, (T1_Discounted_Incentive__c / Discounted_Issuing_Revenue_Inc_Val__c) , (T1_Discounted_Incentive__c / Discounted_Issuing_Revenue_Inc_Val__c) * -1) 
)</formula>
        <label>Discounted Issuer Payout % (Inc.)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Discounted_Issuing_Revenue_Base_Inc_Val__c</fullName>
        <label>Discounted Issuing Revenue (Base + Inc.)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discounted_Issuing_Revenue_Inc_Val__c</fullName>
        <label>Discounted Issuing Revenue (Inc.)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discounted_Other_Costs_Base_Inc__c</fullName>
        <description>T2_Other_Costs__c/ ((1+ BD_Discounted_Rate__c ) ^ ( Deal Financial Model.BD_Deal_Year__c -1))
Field is calculated in the BD_Deal_TriggerActions</description>
        <label>Discounted Other Costs (Base + Inc)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discounted_Other_Costs_Inc__c</fullName>
        <description>T1_Other_Costs__c/ ((1+ BD_Discounted_Rate__c ) ^ ( Deal Financial Model.BD_Deal_Year__c -1))
Field is calculated in the BD_Deal_TriggerActions</description>
        <label>Discounted Other Costs (Inc.)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discounted_Other_Revenue_Base_Inc__c</fullName>
        <description>T2_Processing_Revenue__c / ((1+ BD_Discounted_Rate__c ) ^ ( Deal Financial Model.BD_Deal_Year__c -1))
Field is calculated in the BD_Deal_TriggerActions</description>
        <label>Discounted Other Revenue (Base + Inc)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discounted_Other_Revenue_Inc__c</fullName>
        <description>T1_Processing_Revenue__c / ((1+ BD_Discounted_Rate__c ) ^ ( Deal Financial Model.BD_Deal_Year__c -1))
Field is calculated in the BD_Deal_TriggerActions</description>
        <label>Discounted Other Revenue (Inc.)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Does_pr_deal_have_residual_yr_revenue__c</fullName>
        <inlineHelpText>Clarifies whether the existing deal has protection for years beyond the contract term.</inlineHelpText>
        <label>Residual Years on Existing Deal</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <inlineHelpText>The date contract obligations will end.</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Execute_Main_Condition_Routing_WF__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Execute Main Condition Routing WF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Executive_Summary__c</fullName>
        <description>Executive Summary field for the deal.</description>
        <inlineHelpText>To be updated by IMK or USM finance for deals that will require executive approval</inlineHelpText>
        <label>Quad Key Metrics Dashboard Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Extended_End_Date__c</fullName>
        <description>For use by Finance only track records that have amendments/extensions. This is temporary until an expiration/amendment process is put in place in 2014. This field is not visible to all end users.</description>
        <label>Extended End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Extension_Notes__c</fullName>
        <label>Extension Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Final_Terms_Last_Updated_By__c</fullName>
        <description>Identifies the last user to modify Final Terms on the record.</description>
        <label>Final Terms Last Updated By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Final_Terms_Last_Updated_Date__c</fullName>
        <description>Identifies the date the final terms on deal record was last modified</description>
        <label>Final Terms Last Updated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Final_Terms_Type_of_Customer_Support__c</fullName>
        <inlineHelpText>Select or deselect Customer Support Types to align with final negotiated outcomes. Click Save Changes after adding/removing values.</inlineHelpText>
        <label>Final Type(s) of Customer Support</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sign-On Bonus</fullName>
                </value>
                <value>
                    <fullName>Cross Border Base bps</fullName>
                </value>
                <value>
                    <fullName>Cross Border Incremental bps</fullName>
                </value>
                <value>
                    <fullName>GDV-Base bps</fullName>
                </value>
                <value>
                    <fullName>GDV Incremental bps</fullName>
                </value>
                <value>
                    <fullName>GDV Processed Base bps</fullName>
                </value>
                <value>
                    <fullName>GDV Processed Incremental bps</fullName>
                </value>
                <value>
                    <fullName>Retail Sales Base bps</fullName>
                </value>
                <value>
                    <fullName>Retail Sales Incremental bps</fullName>
                </value>
                <value>
                    <fullName>Retail Sales Processed Base bps</fullName>
                </value>
                <value>
                    <fullName>Retail Sales Processed Incremental bps</fullName>
                </value>
                <value>
                    <fullName>Account Support</fullName>
                </value>
                <value>
                    <fullName>Advance of Incentives</fullName>
                </value>
                <value>
                    <fullName>Advisors/Consulting</fullName>
                </value>
                <value>
                    <fullName>Advisors Consulting Services Support</fullName>
                </value>
                <value>
                    <fullName>Advisors Information Services Support</fullName>
                </value>
                <value>
                    <fullName>Advisors Managed Services Support</fullName>
                </value>
                <value>
                    <fullName>Base Assessed Transaction Support</fullName>
                </value>
                <value>
                    <fullName>Base Processed Transaction Support</fullName>
                </value>
                <value>
                    <fullName>Card Support</fullName>
                </value>
                <value>
                    <fullName>Cirrus Switch Fee Rebate</fullName>
                </value>
                <value>
                    <fullName>Conversion Support</fullName>
                </value>
                <value>
                    <fullName>Cross Border Assessment rebates</fullName>
                </value>
                <value>
                    <fullName>Customer Delivery Services</fullName>
                </value>
                <value>
                    <fullName>Designated FTE</fullName>
                </value>
                <value>
                    <fullName>Digital Support</fullName>
                </value>
                <value>
                    <fullName>ESS Support</fullName>
                </value>
                <value>
                    <fullName>GP&amp;S Incentive</fullName>
                </value>
                <value>
                    <fullName>Joint Development Fund</fullName>
                </value>
                <value>
                    <fullName>Incremental Assessed Transact Support</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Financial_edit_history_c__c</fullName>
        <inlineHelpText>Use to track changes on financial model</inlineHelpText>
        <label>Financial model data to projections</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>First_Year_Currency_Rate__c</fullName>
        <description>The currency rate of the first year of the contract. This currency is used for to calculation the conversion for the key assumptions &amp; metrics records.</description>
        <inlineHelpText>The currency rate of the first year of the contract. This currency is used for to calculation the conversion for the key assumptions &amp; metrics records.</inlineHelpText>
        <label>First Year Currency Rate</label>
        <precision>18</precision>
        <scale>14</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Funding_Source__c</fullName>
        <inlineHelpText>Indicates type of funding that is applies to a merchant agreement</inlineHelpText>
        <label>Funding Source</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contra Revenue</fullName>
                </value>
                <value>
                    <fullName>Advertising &amp; Marketing</fullName>
                </value>
                <value>
                    <fullName>Chip Funds</fullName>
                </value>
                <value>
                    <fullName>Other Customer Funds</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gross_Customer_Revenue_BPS_Base_Inc__c</fullName>
        <formula>IF(BLANKVALUE(T2_GDV__c , 0) = 0, 
0, 
(T2_Gross_Customer_Revenue__c/T2_GDV__c )*10000
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross Customer Revenue BPS (Base + Inc.)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gross_Customer_Revenue_BPS_Inc__c</fullName>
        <formula>IF(BLANKVALUE(T1_GDV__c , 0) = 0, 
0, 
(T1_Gross_Customer_Revenue__c/T1_GDV__c )*10000
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross Customer Revenue BPS (Inc.)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gross_Total_Revenue_BPS_Base_Inc__c</fullName>
        <formula>IF(BLANKVALUE(T2_GDV__c , 0) = 0, 
0, 
(T2_Total_Revenue__c/T2_GDV__c )*10000
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross Total Revenue BPS (Base + Inc.)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gross_Total_Revenue_BPS_Inc__c</fullName>
        <formula>IF(BLANKVALUE(T1_GDV__c , 0) = 0, 
0, 
(T1_Total_Revenue__c/T1_GDV__c )*10000
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross Total Revenue BPS (Inc.)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Has_Extension__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This check box is used to remove deal records from reporting and is only be editable by users with the BD Finance Admin or System Admin profiles.</description>
        <label>Exclude from Reporting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_This_Deal_Been_In_Override_Mode__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox will be checked to true when a deal has been once in override mode by workflow</description>
        <label>Has this deal been in Override Mode?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ICA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Issuer or Acquirer ICA.</inlineHelpText>
        <label>ICA</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>bDeals2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IMK_FTE__c</fullName>
        <description>This field indicates whether a deal is eligible for Fast Track approval or not.</description>
        <inlineHelpText>This field indicates whether a deal is eligible for Fast Track approval or not.</inlineHelpText>
        <label>IMK Fast Track Eligible</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IPS_ConditionRouting__c</fullName>
        <description>Field that will be populated by wf to have an additional Approval Routing record for Mastercard Processing deals when applicable.</description>
        <label>MasterCard Processing ConditionRouting</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPS_Start_Date__c</fullName>
        <label>Processing Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>If_No_Explain_Why_Deal_Isnt_eligible__c</fullName>
        <label>If No, Explain Why Deal Isn&apos;t Eligible</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>